@@ -1066,22 +1066,51 @@ name|ramBytesUsed
 operator|-=
 name|HASHTABLE_RAM_BYTES_PER_ENTRY
 expr_stmt|;
-name|onDocIdSetEviction
-argument_list|(
-name|coreKey
-argument_list|,
+specifier|final
+name|int
+name|numEntries
+init|=
 name|leafCache
 operator|.
 name|cache
 operator|.
 name|size
 argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|numEntries
+operator|>
+literal|0
+condition|)
+block|{
+name|onDocIdSetEviction
+argument_list|(
+name|coreKey
+argument_list|,
+name|numEntries
 argument_list|,
 name|leafCache
 operator|.
 name|ramBytesUsed
 argument_list|)
 expr_stmt|;
+block|}
+else|else
+block|{
+assert|assert
+name|numEntries
+operator|==
+literal|0
+assert|;
+assert|assert
+name|leafCache
+operator|.
+name|ramBytesUsed
+operator|==
+literal|0
+assert|;
+block|}
 block|}
 block|}
 comment|/**    * Remove all cache entries for the given query.    */
