@@ -8035,6 +8035,178 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+DECL|method|testEvictEmptySegmentCache
+specifier|public
+name|void
+name|testEvictEmptySegmentCache
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+specifier|final
+name|RandomIndexWriter
+name|w
+init|=
+operator|new
+name|RandomIndexWriter
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+name|dir
+argument_list|)
+decl_stmt|;
+name|w
+operator|.
+name|addDocument
+argument_list|(
+operator|new
+name|Document
+argument_list|()
+argument_list|)
+expr_stmt|;
+specifier|final
+name|DirectoryReader
+name|reader
+init|=
+name|w
+operator|.
+name|getReader
+argument_list|()
+decl_stmt|;
+specifier|final
+name|IndexSearcher
+name|searcher
+init|=
+name|newSearcher
+argument_list|(
+name|reader
+argument_list|)
+decl_stmt|;
+specifier|final
+name|LRUQueryCache
+name|queryCache
+init|=
+operator|new
+name|LRUQueryCache
+argument_list|(
+literal|2
+argument_list|,
+literal|100000
+argument_list|)
+block|{
+annotation|@
+name|Override
+specifier|protected
+name|void
+name|onDocIdSetEviction
+parameter_list|(
+name|Object
+name|readerCoreKey
+parameter_list|,
+name|int
+name|numEntries
+parameter_list|,
+name|long
+name|sumRamBytesUsed
+parameter_list|)
+block|{
+name|super
+operator|.
+name|onDocIdSetEviction
+argument_list|(
+name|readerCoreKey
+argument_list|,
+name|numEntries
+argument_list|,
+name|sumRamBytesUsed
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|numEntries
+operator|>
+literal|0
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+decl_stmt|;
+name|searcher
+operator|.
+name|setQueryCache
+argument_list|(
+name|queryCache
+argument_list|)
+expr_stmt|;
+name|searcher
+operator|.
+name|setQueryCachingPolicy
+argument_list|(
+name|QueryCachingPolicy
+operator|.
+name|ALWAYS_CACHE
+argument_list|)
+expr_stmt|;
+name|Query
+name|query
+init|=
+operator|new
+name|DummyQuery
+argument_list|()
+decl_stmt|;
+name|searcher
+operator|.
+name|count
+argument_list|(
+name|query
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Collections
+operator|.
+name|singletonList
+argument_list|(
+name|query
+argument_list|)
+argument_list|,
+name|queryCache
+operator|.
+name|cachedQueries
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|queryCache
+operator|.
+name|clearQuery
+argument_list|(
+name|query
+argument_list|)
+expr_stmt|;
+name|reader
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+comment|// make sure this does not trigger eviction of segment caches with no entries
+name|w
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 end_class
 end_unit
